[gd_scene load_steps=3 format=3 uid="uid://bodds8i3o14a6"]

[ext_resource type="Script" path="res://Destructibles/Destructible/Destructible.gd" id="1_wf4gl"]
[ext_resource type="PackedScene" uid="uid://brqxsl27tj21l" path="res://Destructibles/HurtBox/hurt_box.tscn" id="2_certn"]

[node name="Destructible" type="Node2D"]
script = ExtResource("1_wf4gl")

[node name="HurtBox" parent="." instance=ExtResource("2_certn")]

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="took_hit" from="HurtBox" to="." method="_on_hurt_box_took_hit"]
